# packed_struct.rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
packed_struct/: Cargo.toml  build.rs
packed_struct/src/: bits.rs  debug_fmt.rs  lib.rs  packing.rs  primitive_enum.rs  types_array.rs  types_basic.rs  types_bits.rs  types_generic.rs  types_num.rs  types_reserved.rs  types_tuples.rs  types_vec.rs  utils.rs
packed_struct/src/internal_prelude/: no_std.rs  std.rs
packed_struct/src/packing/: bits.rs  debug_fmt.rs  mod.rs  packing.rs  types.rs  types_compact.rs  types_ints.rs
packed_struct/src/prelude/: mod.rs  no_std.rs  std.rs
packed_struct_codegen/: Cargo.toml
packed_struct_codegen/src/: common.rs  lib.rs  pack.rs  pack_codegen.rs  pack_codegen_docs.rs  pack_parse.rs  pack_parse_attributes.rs  primitive_enum.rs  utils.rs  utils_syn.rs
packed_struct_examples/: Cargo.toml
packed_struct_examples/src/: example1.rs  example2.rs  lib.rs
packed_struct_nostd_tests/: Cargo.toml
packed_struct_nostd_tests/src/: lib.rs
packed_struct_tests/: Cargo.toml
packed_struct_tests/tests/: common.rs  debug_fields.rs  debug_fields_long.rs  enum_packing.rs  enum_packing_2.rs  enum_packing_3.rs  packing_arrays.rs  packing_autosize.rs  packing_bit_positioning.rs  packing_codegen_1.rs  packing_codegen_2.rs  packing_codegen_3.rs  packing_compact_byte.rs  packing_enum_16bit.rs  packing_issue_10.rs  packing_lsb_bit_order.rs  packing_msp.rs  packing_primitives.rs  packing_reserved.rs  packing_tiny_flags.rs  packing_tuples.rs  primitive_enum.rs  primitive_enum_catch_all.rs  primitive_enum_consts.rs  primitive_enum_roundtrip.rs  primitive_enum_types.rs  primitive_enum_values.rs  roundtrip_1.rs  roundtrip_2.rs  test_serde.rs  test_usb_pd.rs  test_wide_ints_14.rs  test_wide_ints_50.rs
