[package]
name = "packed_struct"
description = "Binary-level structure packing and unpacking generator"
repository = "https://github.com/hashmismatch/packed_struct.rs"
homepage = "http://www.hashmismatch.net/libraries/packed-struct/"
version = "0.4.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
build = "build.rs"
license = "MIT OR Apache-2.0"
keywords = ["enum", "packing", "serialization"]
categories = ["encoding"]
readme = "../README.md"

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["serde/std"]
alloc = []
byte_types_64 = []
byte_types_256 = []
use_serde = ["serde", "serde_derive"]

# comment this section when publishing new releases to crates.io!
[dev-dependencies]
packed_struct_codegen = "0.4"
