[package]
name = "packed_struct_codegen"
description = "This crate implements the code generation for the packed_struct library."
repository = "https://github.com/hashmismatch/packed_struct.rs"
version = "0.2.1"
license = "MIT OR Apache-2.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]

[dependencies]
quote = "^0.3.12"
packed_struct = { version = "0.2", default-features = false }

[dependencies.syn]
version = "^0.11.4"
features = ["full", "parsing", "printing"]

[lib]
proc-macro = true

[features]
default = ["std"]
std = []
core_collections = []
