[package]
name = "packed_struct_codegen"
description = "This crate implements the code generation for the packed_struct library."
repository = "https://github.com/hashmismatch/packed_struct.rs"
version = "0.5.0"
license = "MIT OR Apache-2.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]

[dependencies]
quote = "1.0"
syn =  { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"

[lib]
proc-macro = true

[features]
default = []
std = []
alloc = []
