[package]
name = "packed_struct_nostd_tests"
version = "0.1.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]

[dependencies.packed_struct]
version="0.3"
default-features = false

[dependencies.packed_struct_codegen]
version="0.3"
default-features = false


[patch.crates-io]
packed_struct = { path="../packed_struct" }
packed_struct_codegen = { path="../packed_struct_codegen" }
